finished styling for sign up component, also fixed a bug with the burger button overlapping sign up button

--- a/src/components/menu-button/menu-button.styles.css
+++ b/src/components/menu-button/menu-button.styles.css
@@ -1,7 +1,7 @@
 .MenuButtonContainer {
     position: absolute;
     z-index: 10;
-    width: 100vw;
+    width: 120px;
     text-align: left;
     margin-left: 3px;
     max-width: 200px;
