--- a/src/pages/sign-up/sign-up.styles.scss
+++ b/src/pages/sign-up/sign-up.styles.scss
@@ -1,4 +1,4 @@
-.SignInContainer {
+.SignUpContainer {
     width: 80vw;
     display: flex;
     flex-direction: column;
@@ -7,7 +7,7 @@
     min-width: 200px;
 }
 
-.SignInTitle {
+.SignUpTitle {
     margin: 10px 51px;
     margin-top: 35px;
     font-size: 1.7em;
@@ -25,8 +25,8 @@
     max-width: 220px;
 }
 
-.sign-in-text {
-margin-top: 80px;
+.sign-up-text {
+margin-top: 30px;
 margin-left: 51px;
 text-align: left;
 color: #707070;
@@ -37,15 +37,14 @@ cursor: pointer;
 }
 }
 
-.forgot-password-text {
-margin-top: 5px;
-margin-left: 51px;
-text-align: left;
-color: #707070;
-cursor: pointer;
-
-&:hover {
-    color: black;
-}
-}
-
+.sign-up-text2 {
+    margin-top: 5px;
+    margin-left: 51px;
+    text-align: left;
+    color: #707070;
+    cursor: pointer;
+    
+    &:hover {
+        color: black;
+    }
+    }
